Refactor node management
