# api/swagger/swagger.json
@@ -157,12 +157,84 @@
         }
       }
     },
+    "/v0/nodes": {
+      "get": {
+        "tags": [
+          "Node"
+        ],
+        "operationId": "ListMixin4",
+        "responses": {
+          "200": {
+            "description": "(empty)",
+            "schema": {
+              "$ref": "#/definitions/apiNodeListResponse"
+            }
+          }
+        }
+      }
+    },
+    "/v0/nodes/{name}": {
+      "delete": {
+        "tags": [
+          "Node"
+        ],
+        "operationId": "RemoveMixin4",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "name",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "(empty)",
+            "schema": {
+              "$ref": "#/definitions/apiNodeRemoveResponse"
+            }
+          }
+        }
+      }
+    },
+    "/v0/nodes/{name}/services": {
+      "delete": {
+        "tags": [
+          "Node"
+        ],
+        "operationId": "RemoveService",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "name",
+            "in": "path",
+            "required": true
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/apiNodeRemoveServiceRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "(empty)",
+            "schema": {
+              "$ref": "#/definitions/apiNodeRemoveServiceResponse"
+            }
+          }
+        }
+      }
+    },
     "/v0/postgresql": {
       "get": {
         "tags": [
           "PostgreSQL"
         ],
-        "operationId": "ListMixin4",
+        "operationId": "ListMixin5",
         "responses": {
           "200": {
             "description": "(empty)",
@@ -176,7 +248,7 @@
         "tags": [
           "PostgreSQL"
         ],
-        "operationId": "AddMixin4",
+        "operationId": "AddMixin5",
         "parameters": [
           {
             "name": "body",
@@ -202,7 +274,7 @@
         "tags": [
           "PostgreSQL"
         ],
-        "operationId": "RemoveMixin4",
+        "operationId": "RemoveMixin5",
         "parameters": [
           {
             "type": "integer",
@@ -227,7 +299,7 @@
         "tags": [
           "RDS"
         ],
-        "operationId": "ListMixin5",
+        "operationId": "ListMixin6",
         "responses": {
           "200": {
             "description": "(empty)",
@@ -241,7 +313,7 @@
         "tags": [
           "RDS"
         ],
-        "operationId": "AddMixin5",
+        "operationId": "AddMixin6",
         "parameters": [
           {
             "name": "body",
@@ -265,7 +337,7 @@
         "tags": [
           "RDS"
         ],
-        "operationId": "RemoveMixin5",
+        "operationId": "RemoveMixin6",
         "parameters": [
           {
             "name": "body",
@@ -350,7 +422,7 @@
         "tags": [
           "Remote"
         ],
-        "operationId": "ListMixin6",
+        "operationId": "ListMixin7",
         "responses": {
           "200": {
             "description": "(empty)",
@@ -367,7 +439,7 @@
           "ScrapeConfigs"
         ],
         "summary": "List returns all scrape configs.",
-        "operationId": "ListMixin7",
+        "operationId": "ListMixin8",
         "responses": {
           "200": {
             "description": "(empty)",
@@ -382,7 +454,7 @@
           "ScrapeConfigs"
         ],
         "summary": "Create creates a new scrape config.\nErrors: InvalidArgument(3) if some argument is not valid,\nAlreadyExists(6) if scrape config with that job name is already present,\nFailedPrecondition(9) if reachability check was requested and some scrape target can't be reached.",
-        "operationId": "CreateMixin7",
+        "operationId": "CreateMixin8",
         "parameters": [
           {
             "name": "body",
@@ -674,6 +746,80 @@
           "format": "int64"
         }
       }
+    },
+    "apiNodeInstance": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "services": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/apiNodeInstanceService"
+          }
+        }
+      }
+    },
+    "apiNodeInstanceService": {
+      "type": "object",
+      "properties": {
+        "address": {
+          "type": "string"
+        },
+        "engine": {
+          "type": "string"
+        },
+        "engine_version": {
+          "type": "string"
+        },
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "port": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "region": {
+          "type": "string"
+        },
+        "type": {
+          "type": "string"
+        }
+      }
+    },
+    "apiNodeListResponse": {
+      "type": "object",
+      "properties": {
+        "instances": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/apiNodeInstance"
+          }
+        }
+      }
+    },
+    "apiNodeRemoveResponse": {
+      "type": "object"
+    },
+    "apiNodeRemoveServiceRequest": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string"
+        },
+        "type": {
+          "type": "string"
+        }
+      }
+    },
+    "apiNodeRemoveServiceResponse": {
+      "type": "object"
     },
     "apiPostgreSQLAddRequest": {
       "type": "object",
